--- a/simple2.html
+++ b/simple2.html
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <div id=outerDiv class="container">
+      <div class=""> <img src="./th.jpg" alt="" width="500" height="500"></div>
+      <div> <img src="./th.jpg" alt="" width="100" height="100"></div>
+    </div>
     <script>
 
     </script>
