--- a/remAndem.html
+++ b/remAndem.html
@@ -7,14 +7,17 @@
     <style>
       .wrapper {
         font-size: 1em;
-        height: 2em;
+        height: 5em;
+        width: fit-content;
         border-style: solid;
+        margin: auto;
       }
 
       .px {
         display: inline;
         width: 200px;
         border-style: solid;
+        align-content: center;
       }
 
       .vw {
@@ -39,10 +42,10 @@
 
   <body>
     <div class="wrapper">
-      <div class="px">I am 200px wide</div>
-      <div class="vw">I am 10vw wide</div>
-      <div class="em">I am 10em wide</div>
-      <div class="em2">I am 19em wide</div>
+      <div class="px">200px</div>
+      <div class="vw">10vw</div>
+      <div class="em">10em</div>
+      <div class="em2">19</div>
     </div>
 
     <script>
